[package]
name = "ktrace"
version = "0.1.0"
description = "A library for parsing FreeBSD ktrace records"
authors = ["Jonathan Anderson <jonathan.anderson@mun.ca>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/cadets/ktrace-rs"
readme = "README.md"

[dependencies]
bit-vec = "0.4.3"
byteorder = "0.5.3"
clap = "2.19.2"
libc = "0.2.18"
nix = "0.7.0"
